[project]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]

[tool.poetry]
name = "chup"
version = "0.1.0"
description = "My incremental backup tool with encryption"
authors = ["Chuyang Chen <chuyangchen2018@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tomlkit = "0.11.8"
schedule = "^1.2.0"

[tool.poetry.dev-dependencies]
cx-Freeze = "^6.14.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
